fix: extends ControllerClass
