# packages/swagger-tegg/example/app/module/user/controller/userController.ts
@@ -1,6 +1,32 @@
 import {  } from 'egg';
 import {  Context, EggContext, HTTPBody, HTTPController, HTTPMethod, HTTPMethodEnum, HTTPQuery } from '@eggjs/tegg'
-
+class Member {
+  /**
+   * @summary 适用于继承第三方包controller，在编译过后d.ts中没有httpMethod。通过 router 这个tag来识别
+   * @router GET /findMember
+   * @description 第一个是method,第二个参数是path,中间用空格分隔，不支持ctx.query识别类型，只能通过HTTPQuery来识别。
+   */
+  async findMemeber(@Context() ctx: EggContext, /** 用户id */ @HTTPQuery() userId: number ){
+    return {}
+  }
+  /**
+   * @summary 这是summary描述
+   * @description  这是descriptionm描述
+   */
+  @HTTPMethod({
+    method: HTTPMethodEnum.POST,
+    path: 'updateMember',
+  })
+  async updateMember(@Context() ctx: EggContext, @HTTPBody() body: User & { userId: number }) {
+    let user: User = {
+      name: 'egg',
+      age: 20,
+      address: '地址',
+      enabled: false
+    }
+    return user
+  }
+}
 
 type User = {
   name: string  //用户名字
@@ -12,7 +38,7 @@ type User = {
 }
 
 @HTTPController({path:'/user'})
-export class UserController {
+export class UserController extends  Member {
    /**
    * @summary   获取用户名字
    * @description  这是descriptionm描述
@@ -53,10 +79,12 @@ export class UserController {
 
 
   /**
-   * @summary 第一个是method,第二个参数是path,中间用空格分隔
-   * @router delete /user/deleteUser
-   * @description  适用于第三方包在编译过程过后，d.ts中没有httpMethod，所用通过 router 这个tag来识。不支持ctx.query识别类型，智能通过HTTPQuery来识别。
+   * @summary 测试泛型
    */
+  @HTTPMethod({
+    method: HTTPMethodEnum.DELETE,
+    path: 'deleteUser',
+  })
   async deleteUser(@Context() ctx: EggContext, @HTTPQuery() userId:string){
     type User2<T> = {
       type:T
@@ -75,3 +103,4 @@ export class UserController {
     return user
   }
 }
+
